<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.app.bitwit.activity.auth.LoginActivity" />

        <variable
            name="viewModel"
            type="com.app.bitwit.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccentLight"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:text="@string/loginTitle"
            android:textColor="@color/colorBasic"
            android:textSize="29sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/loginMessage"
            android:textColor="@color/colorBasic"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/warning1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorWarningLight"
            android:textSize="14sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/warning2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorWarningLight"
            android:textSize="14sp"
            android:visibility="gone"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:autofillHints="@null"
            android:backgroundTint="@color/colorBasic"
            android:hint="@string/loginEmailHint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="@={viewModel.email}"
            android:textColor="@color/colorBasic"
            android:textColorHint="@color/colorBasic"
            android:textSize="15sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:autofillHints="@null"
            android:backgroundTint="@color/colorBasic"
            android:hint="@string/loginPasswordHint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="@={viewModel.password}"
            android:textColor="@color/colorBasic"
            android:textColorHint="@color/colorBasic"
            android:textSize="15sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/colorBasic"
            android:onClick="@{() -> viewModel.loginBtnClick()}"
            android:stateListAnimator="@null"
            android:text="@string/loginButton"
            android:textColor="@color/colorAccent"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:baselineAligned="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:onClick="@{() -> viewModel.navigateSignUp()}"
                android:text="@string/loginTextButton_signIn"
                android:textColor="@color/colorBasic"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded,SmallSp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/loginTextButtonParser"
                android:textColor="@color/colorBasic"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/forgotPasswordText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:onClick="onForgotPasswordTextClick"
                android:text="@string/loginTextButton_findPassword"
                android:textColor="@color/colorBasic"
                android:textSize="15sp"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />
        </LinearLayout>
    </LinearLayout>
</layout>
