<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.app.bitwit.activity.auth.SignUpActivity" />

        <variable
            name="viewModel"
            type="com.app.bitwit.viewmodel.SignUpViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBasic"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:text="@string/signInTitle"
            android:textColor="@color/colorAccent"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signUpText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:text="@{viewModel.text1 == null ? @string/signInMessage1 : viewModel.text1}"
            android:textSize="15sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/signUpText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@{viewModel.text2 == null ? @string/signInMessage2 : viewModel.text2}"
            android:textSize="15sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/warningText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWarning"
            android:textSize="14sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:autofillHints="@null"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/signInEmailHint"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:maxLines="1"
            android:text="@={viewModel.email}"
            android:textSize="15sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:autofillHints="@null"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/signInPasswordHint"
            android:inputType="textPassword"
            android:maxLength="15"
            android:maxLines="1"
            android:text="@={viewModel.password}"
            android:textSize="15sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:backgroundTint="@color/colorAccent"
            android:onClick="@{() -> viewModel.publishCompleteBtnClick()}"
            android:stateListAnimator="@null"
            android:text="@string/signInButton"
            android:textColor="@color/colorBasic"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="37dp"
            android:text="@string/signInTextButton_sub"
            android:textSize="14sp"
            tools:ignore="SmallSp" />

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="7dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leftLoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signInTextButton_left"
                android:textAlignment="center"
                android:textSize="15sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/loginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.publishNavigateLoginBtnClick()}"
                android:text="@string/signInTextButton"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rightLoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signInTextButton_right"
                android:textAlignment="center"
                android:textSize="15sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <Button
            android:id="@+id/naverButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="13dp"
            android:backgroundTint="#03C75A"
            android:onClick="@{() -> viewModel.publishCompleteBtnClick()}"
            android:stateListAnimator="@null"
            android:text="네이버 아이디로 로그인"
            android:textColor="@color/colorBasic"
            android:textSize="15sp" />
    </LinearLayout>
</layout>
