<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.app.bitwit.view.activity.auth.LoginActivity" />

        <variable
            name="viewModel"
            type="com.app.bitwit.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineY20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineY40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineY80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".8" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/loginTitle"
            android:textColor="@color/colorAccent"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineY20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:text="@{viewModel.infoMessage == null ? @string/loginMessage : viewModel.infoMessage}"
            android:textSize="13dp"
            android:textColor="@{viewModel.isWarning ? @color/colorWarning : @color/black}"
            android:lineSpacingExtra="6dp"
            app:layout_constraintEnd_toEndOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <EditText
            android:id="@+id/emailEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:autofillHints="@null"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/loginEmailHint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="@={viewModel.email}"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineY40"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginTop="24dp"
            android:autofillHints="@null"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/loginPasswordHint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="@={viewModel.password}"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/emailEdit"
            app:layout_constraintStart_toStartOf="@+id/emailEdit"
            app:layout_constraintTop_toBottomOf="@+id/emailEdit"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorAccent"
            android:stateListAnimator="@null"
            android:text="@string/loginButton"
            android:textColor="@color/colorBasic"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/passwordEdit"
            app:layout_constraintStart_toStartOf="@+id/passwordEdit"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/loginTextButton_signIn"
            android:textColor="#606060"
            android:textSize="13dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
            app:layout_constraintEnd_toStartOf="@+id/textView15"
            tools:ignore="RtlHardcoded,SmallSp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/loginTextButtonParser"
            android:textColor="@color/gray"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="@+id/confirmBtn"
            app:layout_constraintStart_toStartOf="@+id/confirmBtn"
            app:layout_constraintTop_toBottomOf="@+id/confirmBtn" />

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/loginTextButton_findPassword"
            android:textColor="#606060"
            android:textSize="13dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView15"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            tools:ignore="SmallSp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/googleLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="googleLoginLayout"
            app:layout_constraintTop_toTopOf="@+id/guidelineY80">

            <View
                android:id="@+id/view9"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/googleLoginText"
                app:layout_constraintEnd_toStartOf="@+id/googleLoginText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/googleLoginText" />

            <TextView
                android:id="@+id/googleLoginText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="구글 계정으로 간편하게 이용하세요"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:background="@color/gray"
                app:layout_constraintBottom_toBottomOf="@+id/googleLoginText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/googleLoginText"
                app:layout_constraintTop_toTopOf="@+id/googleLoginText" />

            <Button
                android:id="@+id/googleLogin"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/btn_google_login"
                app:layout_constraintEnd_toEndOf="@+id/googleLoginText"
                app:layout_constraintStart_toStartOf="@+id/googleLoginText"
                app:layout_constraintTop_toBottomOf="@+id/googleLoginText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
